@@ -33,7 +33,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.CharFilterFactory;
 import org.apache.lucene.analysis.TokenFilterFactory;
@@ -81,19 +80,17 @@ public final class AnalysisImpl implements Analysis {
 
   @Override
   public Collection<String> getAvailableCharFilters() {
-    return CharFilterFactory.availableCharFilters().stream().sorted().collect(Collectors.toList());
+    return CharFilterFactory.availableCharFilters().stream().sorted().toList();
   }
 
   @Override
   public Collection<String> getAvailableTokenizers() {
-    return TokenizerFactory.availableTokenizers().stream().sorted().collect(Collectors.toList());
+    return TokenizerFactory.availableTokenizers().stream().sorted().toList();
   }
 
   @Override
   public Collection<String> getAvailableTokenFilters() {
-    return TokenFilterFactory.availableTokenFilters().stream()
-        .sorted()
-        .collect(Collectors.toList());
+    return TokenFilterFactory.availableTokenFilters().stream().sorted().toList();
   }
 
   @Override
@@ -166,7 +163,7 @@ public final class AnalysisImpl implements Analysis {
           config
               .getConfigDir()
               .map(path -> CustomAnalyzer.builder(FileSystems.getDefault().getPath(path)))
-              .orElse(CustomAnalyzer.builder());
+              .orElseGet(CustomAnalyzer::builder);
 
       // set tokenizer
       builder.withTokenizer(
